tests/fixtures/invalid/str_bitand_bytes.py
# Cannot bitwise AND Str and Bytes
x: str = "hello" & b"hello"
